text overflow bug fixed

--- a/src/app/article/article.component.scss
+++ b/src/app/article/article.component.scss
@@ -8,6 +8,10 @@
   border-radius: 10px;
 }
 
+.content{
+  overflow-wrap: break-word;
+}
+
 .card-footer{
   text-align: center;
   padding-top: 7px;
